--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
 :root {
-  --text-color: #3d3d3d;
-  --button-color: #07afd4;
-  --hover-color: #125888;
+  --text-color: #303030;
+  --button-color: #b5c528;
+  --hover-color: #668b17;
   --white-color: #ffffff;
 }
 
@@ -18,6 +18,17 @@ body {
   margin: 0;
   width: 100%;
   font-family: "Poppins", sans-serif;
+  background-color: var(--text-color);
+}
+
+h1,
+h2,
+h3,
+h4,
+p,
+span,
+a {
+  color: #fff !important;
 }
 #wrapper {
   position: absolute;
@@ -95,6 +106,13 @@ button:hover {
   gap: 2rem;
 }
 
+#wrapper > span > a {
+  color: var(--button-color);
+}
+#wrapper > span > a:hover {
+  text-decoration: underline;
+}
+
 /* ==========
 Main Page Start
 ========== */
@@ -104,6 +122,11 @@ Main Page Start
     max-width: 1320px;
     margin: 0 auto;
   }
+}
+
+.small-flex {
+  max-width: 1140px;
+  margin: 0 auto;
 }
 header {
   margin-top: 1.2rem;
@@ -241,5 +264,46 @@ h1 > span {
   height: 60%;
   object-fit: cover;
   margin-top: 1rem;
+}
 
+.service {
+  margin: 3rem 0;
+}
+
+h1,
+h2,
+h3 {
+  color: var(--text-color);
+}
+
+.service h2 {
+  font-size: 28px;
+  margin-bottom: 2rem;
+}
+
+.service-wrapper {
+  display: flex;
+  gap: 40px;
+  justify-content: space-evenly;
+}
+
+.service-flex {
+  text-align: center;
+}
+
+.service-flex a {
+  display: block;
+  width: 100%;
+  padding: 24px 32px;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+.service-flex a > img {
+  width: 100%;
+  object-fit: cover;
+  transition: 0.3s ease-in-out;
+}
+
+.service-flex a:hover img {
+  transform: scale(1.1);
 }
