--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@
   font-family: "Poppins", sans-serif;
 }
 body {
+}
+
+#wrapper {
+  width: 100%;
+  height: 100%;
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -24,11 +29,10 @@ small {
 .alert {
   display: flex;
   place-items: center;
-  padding: 0.8rem 2rem;
-  background-color: #fff;
-  margin-bottom: 1rem;
   border-radius: 8px;
   justify-content: space-between;
+  padding: 0.8rem 2rem;
+
 }
 .alert-success {
   background-color: #b6f7b1;
@@ -55,10 +59,18 @@ small {
 }
 
 .alert-container {
-
   max-width: 900px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 1rem;
+  /* width: 900px; */
   width: 100%;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  z-index: 999;
+  border-radius: 8px;
+
+
 }
 
 .container {
